Tue Jul 29 16:34:56 UTC 2008  James H. Hill  <hillj@isis.vanderbilt.edu>

        * utils/BMW/website/BMW.master.cs:

          . Removed dead/commented code.

Tue Jul 29 16:32:41 UTC 2008  James H. Hill  <hillj@isis.vanderbilt.edu>

        * etc/SQL/CUTS-baseline.sql:
        * utils/BMW/assemblies/CUTS.Data/Database.cs:

          . Fixed the page for displaying the baseline metrics of a
            component.

Tue Jul 29 15:54:10 UTC 2008  James H. Hill  <hillj@isis.vanderbilt.edu>

        * utils/BMW/website/styles/default.css:

          . Updated the font-size of <h1> and <h2> tag.

Tue Jul 29 15:52:01 UTC 2008  James H. Hill  <hillj@isis.vanderbilt.edu>

        * utils/BMW/website/BMW.master:

          . Changed the title of the entire website.

Tue Jul 29 15:49:59 UTC 2008  James H. Hill  <hillj@isis.vanderbilt.edu>

        * utils/BMW/website/BMW.master:

          . Updated the names for several of the menu items.

Tue Jul 29 15:14:36 UTC 2008  James H. Hill  <hillj@isis.vanderbilt.edu>

        * utils/BMW/website/BMW.master:
        * utils/BMW/website/BMW.master.cs:
        * utils/BMW/website/help:
        * utils/BMW/website/help/help.master:
        * utils/BMW/website/help/help.master.cs:
        * utils/BMW/website/help/unittest.aspx:
        * utils/BMW/website/help/unittest.aspx.cs:
        * utils/BMW/website/styles/default.css:
        * utils/BMW/website/unittest.aspx:
        * utils/BMW/website/unittest.aspx.cs:

          . Integrated help capabilities into the Master page for the entire
            website. To use the help system, you have to create a page in the
            ./help directory with same name as the source page. If the master
            page find a page with the same name, it will show a button in the
            bottom of the left-hand column to display help. Otherwise, the
            button is not displayed.

Mon Jul 28 21:51:09 UTC 2008  James H. Hill  <hillj@isis.vanderbilt.edu>
