@@ -1,3 +1,15 @@
+// -*- C# -*-
+
+//=============================================================================
+/**
+ * @file            BMW.master.cs
+ *
+ * $Id$
+ *
+ * @author          James H. Hill
+ */
+//=============================================================================
+
 using System;
 using System.IO;
 using System.Collections;
